force-app/main/default/objects/Placement__c/fields/M_I_Daily__c.field-meta.xml
<CustomField>
    <fullName>M_I_Daily__c</fullName>
    <label>M &amp; I Daily</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>