force-app/main/default/objects/Placement__c/fields/M_I_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>M_I_Pass_Through__c</fullName>
    <formula>Account__r.M_I_Pass_Through__c</formula>
    <label>M&amp;I Pass Through</label>
    <type>Checkbox</type>
</CustomField>