force-app/main/default/objects/Placement__c/fields/M_I_Per_Shift__c.field-meta.xml
<CustomField>
    <fullName>M_I_Per_Shift__c</fullName>
    <label>M&amp;I Per Shift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>