force-app/main/default/objects/Placement__c/fields/Malpractice_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Insurance__c</fullName>
    <label>Malpractice Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>