force-app/main/default/objects/Placement__c/fields/Margin_Approved__c.field-meta.xml
<CustomField>
    <fullName>Margin_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Margin Approved</label>
    <type>Checkbox</type>
</CustomField>