force-app/main/default/objects/Placement__c/fields/Marketing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Lead__c</fullName>
    <formula>Job_Applicant__r.Marketing_Lead__c</formula>
    <label>Marketing Lead</label>
    <type>Checkbox</type>
</CustomField>