force-app/main/default/objects/Placement__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>