force-app/main/default/objects/Placement__c/fields/Mileage_Reimbursement_Client__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Reimbursement_Client__c</fullName>
    <label>Mileage Reimbursement Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>