force-app/main/default/objects/Placement__c/fields/Net_Margin__c.field-meta.xml
<CustomField>
    <fullName>Net_Margin__c</fullName>
    <formula>If((Bill_Rate__c==Null ||Bill_Rate__c == &quot;0&quot;),VALUE(Pay_Rate__c),VALUE(Bill_Rate__c) - VALUE(Pay_Rate__c))</formula>
    <label>Net Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>