force-app/main/default/objects/Placement__c/fields/Net_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment_Terms__c</fullName>
    <label>Net Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>