force-app/main/default/objects/Placement__c/fields/Next_Timesheet_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Timesheet_Date__c</fullName>
    <inlineHelpText>System-calculated: When next timesheet is due</inlineHelpText>
    <label>Next Timesheet Date</label>
    <type>Date</type>
</CustomField>