force-app/main/default/objects/Placement__c/fields/No_Of_Days_Taken__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_Taken__c</fullName>
    <label>No. Of Days Taken</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>