force-app/main/default/objects/Placement__c/fields/Non_Taxable_Burden__c.field-meta.xml
<CustomField>
    <fullName>Non_Taxable_Burden__c</fullName>
    <label>Non-Taxable Burden %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>