force-app/main/default/objects/Placement__c/fields/Number_Of_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Shifts__c</fullName>
    <label>Number Of Shifts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>