force-app/main/default/objects/Placement__c/fields/On_Call_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>On_Call_Pay_Rate__c</fullName>
    <label>On Call Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>