force-app/main/default/objects/Placement__c/fields/Onboarding_Error__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Error__c</fullName>
    <label>Onboarding Error</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>