force-app/main/default/objects/Placement__c/fields/Onboarding_Package__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Package__c</fullName>
    <label>Onboarding Package</label>
    <length>60</length>
    <type>Text</type>
</CustomField>