force-app/main/default/objects/Placement__c/fields/Orientation_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Bill_Rate__c</fullName>
    <label>Orientation Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>