force-app/main/default/objects/Placement__c/fields/OT_41_47_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>OT_41_47_Pay_Rate__c</fullName>
    <label>OT 41-47 Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>