force-app/main/default/objects/Placement__c/fields/OT_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>OT_Bill_Rate__c</fullName>
    <label>OT Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>