force-app/main/default/objects/Placement__c/fields/OT_Daily_upto_40_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>OT_Daily_upto_40_Bill_Rate__c</fullName>
    <label>OT Daily upto 40 Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>