force-app/main/default/objects/Placement__c/fields/Overall_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Overall_Feedback__c</fullName>
    <label>Overall Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>