force-app/main/default/objects/Placement__c/fields/Overtime_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Pay_Rate__c</fullName>
    <label>Overtime Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>