force-app/main/default/objects/Placement__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <label>Pay Rate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>