force-app/main/default/objects/Placement__c/fields/Pay_Type__c.field-meta.xml
<CustomField>
    <fullName>Pay_Type__c</fullName>
    <label>Pay Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>W-2 w/benefits</fullName>
            </value>
            <value>
                <fullName>W-2 w/o benefits</fullName>
            </value>
            <value>
                <fullName>Corp to Corp</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>