force-app/main/default/objects/Placement__c/fields/Payroll_Id__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Id__c</fullName>
    <formula>Candidate__r.Payroll_Id__c</formula>
    <label>Payroll Id</label>
    <type>Text</type>
</CustomField>