force-app/main/default/objects/Placement__c/fields/Pending_Client_Signature__c.field-meta.xml
<CustomField>
    <fullName>Pending_Client_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Client Signature</label>
    <type>Checkbox</type>
</CustomField>