force-app/main/default/objects/Placement__c/fields/Per_Diem_Update_Offer_Created__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Update_Offer_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Diem Update Offer Created</label>
    <type>Checkbox</type>
</CustomField>