force-app/main/default/objects/Placement__c/fields/Per_Diem_Update_Offer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Update_Offer_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Diem Update Offer Sent</label>
    <type>Checkbox</type>
</CustomField>