force-app/main/default/objects/Placement__c/fields/Perm_Guarantee_Period__c.field-meta.xml
<CustomField>
    <fullName>Perm_Guarantee_Period__c</fullName>
    <formula>TEXT( Account__r.Perm_Guarantee_Period__c )</formula>
    <label>Perm Guarantee Period</label>
    <type>Text</type>
</CustomField>