force-app/main/default/objects/Placement__c/fields/Placed_Within_Contracted_Rate__c.field-meta.xml
<CustomField>
    <fullName>Placed_Within_Contracted_Rate__c</fullName>
    <label>Placed Within Contracted Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>