force-app/main/default/objects/Placement__c/fields/Placement_Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Placement_Converted_Date__c</fullName>
    <label>Placement Converted Date</label>
    <type>Date</type>
</CustomField>