force-app/main/default/objects/Placement__c/fields/Placement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Placement_Fee__c</fullName>
    <label>Placement Fee $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>