force-app/main/default/objects/Placement__c/fields/Placement_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Placement_Feedback__c</fullName>
    <label>Placement Feedback</label>
    <type>TextArea</type>
</CustomField>