force-app/main/default/objects/Placement__c/fields/Placement_Owner__c.field-meta.xml
<CustomField>
    <fullName>Placement_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>