force-app/main/default/objects/Placement__c/fields/Placement_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Placement_Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement Rate Card</label>
    <referenceTo>Rate_Card__c</referenceTo>
    <relationshipLabel>Placements</relationshipLabel>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>