force-app/main/default/objects/Placement__c/fields/Placement_Rating__c.field-meta.xml
<CustomField>
    <fullName>Placement_Rating__c</fullName>
    <formula>if(NetMargin__c &gt; 0 &amp;&amp; NetMargin__c &lt; 13.51, IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000LdaD&quot;, &quot;1 Star&quot;),
if(NetMargin__c &gt; 13.51 &amp;&amp; NetMargin__c&lt; 16.51,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000LdaE&quot;, &quot;2 Star&quot;),
if(NetMargin__c &gt; 16.51 &amp;&amp; NetMargin__c &lt; 19.51,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000LdaG&quot;, &quot;3 Star&quot;),
if(NetMargin__c &gt; 19.51 &amp;&amp; NetMargin__c &lt; 22.51,
IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000LdaF&quot;, &quot;4 Star&quot;),
IF(NetMargin__c &gt; 22.51,IMAGE(&quot;/servlet/servlet.FileDownload?file=01540000000LdaH&quot;, &quot;5 Star&quot;),&quot;&quot;))))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Rating</label>
    <type>Text</type>
</CustomField>