force-app/main/default/objects/Placement__c/fields/Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status__c</fullName>
    <label>Placement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Confirmation</fullName>
                <default>true</default>
                <label>Pending Confirmation</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Delayed Start</fullName>
            </value>
            <value>
                <fullName>Cancelled Prior to Start</fullName>
            </value>
            <value>
                <fullName>Approved To Start</fullName>
            </value>
            <value>
                <fullName>On Assignment</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Perm Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>