force-app/main/default/objects/Placement__c/fields/Placement_URL__c.field-meta.xml
<CustomField>
    <fullName>Placement_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
    <label>Placement URL</label>
    <type>Text</type>
</CustomField>