force-app/main/default/objects/Placement__c/fields/Professional_Designation__c.field-meta.xml
<CustomField>
    <fullName>Professional_Designation__c</fullName>
    <formula>TEXT( Job__r.Professional_Discipline__c )</formula>
    <label>Professional Designation</label>
    <type>Text</type>
</CustomField>