force-app/main/default/objects/Placement__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Placements (Project Template)</relationshipLabel>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>