force-app/main/default/objects/Placement__c/fields/QB_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>QB_Account_Name__c</fullName>
    <label>QB Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>