force-app/main/default/objects/Placement__c/fields/RA__c.field-meta.xml
<CustomField>
    <fullName>RA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Placements8</relationshipName>
    <type>Lookup</type>
</CustomField>