force-app/main/default/objects/Placement__c/fields/RA_Commission_Split__c.field-meta.xml
<CustomField>
    <fullName>RA_Commission_Split__c</fullName>
    <label>RA Commission Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>