force-app/main/default/objects/Placement__c/fields/RA_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>RA_Paid_Amount__c</fullName>
    <label>RA Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>