force-app/main/default/objects/Placement__c/fields/RA_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>RA_Paid_Date__c</fullName>
    <label>RA Paid Date</label>
    <type>Date</type>
</CustomField>