force-app/main/default/objects/Placement__c/fields/Rate_Change__c.field-meta.xml
<CustomField>
    <fullName>Rate_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Change</label>
    <type>Checkbox</type>
</CustomField>