force-app/main/default/objects/Placement__c/fields/Reason_for_Termination__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Termination__c</fullName>
    <label>Reason for Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntary Resignation</fullName>
            </value>
            <value>
                <fullName>Termination for Cause</fullName>
            </value>
            <value>
                <fullName>Layoff / Downsizing</fullName>
            </value>
            <value>
                <fullName>End of Contract</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Performance Issues</fullName>
            </value>
            <value>
                <fullName>Better Opportunity</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Mutual Agreement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>