force-app/main/default/objects/Placement__c/fields/Recruiter_Split__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Split__c</fullName>
    <label>Recruiter Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>