force-app/main/default/objects/Placement__c/fields/Recruiting_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Assistant__c</fullName>
    <formula>Job_Applicant__r.RA_Presentation__r.FirstName &amp; &quot; &quot; &amp; Job_Applicant__r.RA_Presentation__r.LastName</formula>
    <label>Recruiting Assistant</label>
    <type>Text</type>
</CustomField>