force-app/main/default/objects/Placement__c/fields/Regular_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Regular_Bill_Rate__c</fullName>
    <label>Regular Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>