force-app/main/default/objects/Placement__c/fields/Send_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Send_Timesheet__c</fullName>
    <formula>Account__r.Send_Timesheet__c</formula>
    <label>Send Timesheet</label>
    <type>Text</type>
</CustomField>