force-app/main/default/objects/Placement__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <label>Shift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>