force-app/main/default/objects/Placement__c/fields/Sign_on_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Sign_on_Bonus__c</fullName>
    <label>Sign on Bonus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>