force-app/main/default/objects/Placement__c/fields/SOW_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Contract_Date__c</fullName>
    <label>SOW Contract Date</label>
    <type>Date</type>
</CustomField>