force-app/main/default/objects/Placement__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>