force-app/main/default/objects/Placement__c/fields/Start_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Year__c</fullName>
    <formula>TEXT(YEAR( Start_Date__c ))</formula>
    <label>Start Year</label>
    <type>Text</type>
</CustomField>