force-app/main/default/objects/Placement__c/fields/Taxable_Burden__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Burden__c</fullName>
    <label>Taxable Burden %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>