force-app/main/default/objects/Placement__c/fields/Terminated_Reason__c.field-meta.xml
<CustomField>
    <fullName>Terminated_Reason__c</fullName>
    <label>Terminated Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Termed Early - Internal Hire</fullName>
            </value>
            <value>
                <fullName>Client Termed Early - Low Census</fullName>
            </value>
            <value>
                <fullName>Client Termed Early - Other</fullName>
            </value>
            <value>
                <fullName>Clinical Incident</fullName>
            </value>
            <value>
                <fullName>Employee Termed - Did Not Sign Offer</fullName>
            </value>
            <value>
                <fullName>Employee Termed Early - Other</fullName>
            </value>
            <value>
                <fullName>Employee Termed Early - Personal Reasons</fullName>
            </value>
            <value>
                <fullName>Employee Termed - Prior to Start</fullName>
            </value>
            <value>
                <fullName>Employee Termed Early - Took Another Job</fullName>
            </value>
            <value>
                <fullName>Professional Counseling / Insubordination</fullName>
            </value>
            <value>
                <fullName>Walked Off Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>