force-app/main/default/objects/Placement__c/fields/Timesheet_Notes__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Notes__c</fullName>
    <formula>Account__r.Timesheet_Notes__c</formula>
    <label>Timesheet Notes</label>
    <type>Text</type>
</CustomField>