force-app/main/default/objects/Placement__c/fields/Timesheet_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Start_Day__c</fullName>
    <label>Timesheet Start Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>1st of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>