force-app/main/default/objects/Placement__c/fields/Timesheet_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timesheet Submitted</label>
    <type>Checkbox</type>
</CustomField>