force-app/main/default/objects/Placement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Placement</fullName>
            </value>
            <value>
                <fullName>Contract to Hire Placement</fullName>
            </value>
            <value>
                <fullName>Permanent Placement</fullName>
            </value>
            <value>
                <fullName>Contract Full Time</fullName>
            </value>
            <value>
                <fullName>Contract Part Time</fullName>
            </value>
            <value>
                <fullName>Per Diem / PRN</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Permanent Part Time</fullName>
            </value>
            <value>
                <fullName>Temp To Perm</fullName>
            </value>
            <value>
                <fullName>Contract/Temp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>