force-app/main/default/objects/Placement__c/fields/Vendor_Offer_Letter_Contact__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Offer_Letter_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Offer Letter Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Placements (Vendor Offer Letter Contact)</relationshipLabel>
    <relationshipName>Placements2</relationshipName>
    <type>Lookup</type>
</CustomField>