force-app/main/default/objects/Placement__c/fields/Verify_Payment_Advice__c.field-meta.xml
<CustomField>
    <fullName>Verify_Payment_Advice__c</fullName>
    <formula>Account__r.Verify_Payment_Advice__c</formula>
    <label>Verify Payment Advice</label>
    <type>Text</type>
</CustomField>