force-app/main/default/objects/Placement__c/fields/Verify_VMS_Hours__c.field-meta.xml
<CustomField>
    <fullName>Verify_VMS_Hours__c</fullName>
    <formula>Account__r.Verify_VMS_Hours__c</formula>
    <label>Verify VMS Hours</label>
    <type>Text</type>
</CustomField>