force-app/main/default/objects/Placement__c/fields/Weekday_Night_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Night_Bill_Rate__c</fullName>
    <label>Weekday Night Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>